--- a/package.json
+++ b/package.json
@@ -24,15 +24,22 @@
     "prisma:generate": "prisma generate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.0",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.5",
     "@types/qrcode": "^1.5.5",
     "autoprefixer": "^10.4.21",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "prisma": "^6.17.1",
     "qrcode": "^1.5.4",
@@ -41,19 +48,25 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.38.3",
+    "viem": "^2.38.4",
+    "wagmi": "^2.18.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.19.22",
     "@types/node-fetch": "^2.6.13",
     "@types/pdfkit": "^0.17.3",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^5.1.0",
     "dotenv": "^16.4.7",
     "dotenv-cli": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.5.6",
+    "msw": "^2.11.6",
     "node-fetch": "^3.3.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
